--- a/04 HTML img/about.html
+++ b/04 HTML img/about.html
@@ -1,11 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About</title>
+    <link rel="stylesheet" href="css/about.css" />
 </head>
+
 <body>
     <a href="index.html">BACK</a>
+    <ul class="menu">
+        <li><a href="#"><span class="icon icon-main"></span>Main</a></li>
+        <li><a href="#"><span class="icon icon-contact"></span>Contact</a></li>
+        <li><a href="#"><span class="icon icon-help"></span>Help</a></li>
+    </ul>
+
+    <ul class="menu font-icons">
+        <li><a href="#"><i class="fas fa-home i"></i>Main</a></li>
+        <li class="li-contact"><a href="#">
+            <span class="fa-stack fa-2x">
+                    <i class="fas fa-circle fa-stack-1x fa-my-circle"></i>
+                    <i class="fas fa-phone fa-stack-1x fa-my-inverse"></i>
+                </span>
+                Contact</a>
+            <ul class="sub-menu">
+                <li><a href="#">1</a></li>
+                <li><a href="#">2</a></li>
+                <li><a href="#">3</a></li>
+            </ul>
+            </li>
+        <li><a href="#"><i class="fas fa-info i"></i>Help</a></li>
+    </ul>
+    <ul class="horizontal">
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+        <li><a href="#">One</a></li>
+    </ul>
+    <script src="https://kit.fontawesome.com/39c9a805b6.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
