--- a/04 HTML img/index.html
+++ b/04 HTML img/index.html
@@ -35,7 +35,7 @@
     <p class="text-style">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque pariatur beatae et sed dicta obcaecati repellendus odio doloribus exercitationem, iste saepe. Facilis consectetur quo nostrum maxime ratione quae et nihil.
     Voluptatibus ratione unde minima, iusto iure et quasi debitis tempora aspernatur natus recusandae fugiat numquam. Error labore voluptates odio soluta! Perferendis sunt dolorem quo rerum, placeat atque vero ea doloremque.</p>
 
-        <ol>
+        <ol class="custom-number">
             <li>1</li>
             <li>2</li>
             <li>3</li>
