Flex, media query, bootstrap

--- a/05 HTML Blocks/index.html
+++ b/05 HTML Blocks/index.html
@@ -14,11 +14,12 @@
         <h1>Header</h1>
     </header>
     <nav class="menu">menu</nav>
-    <aside class="sidebar">float:left</aside>
+    <aside class="sidebar">float:left<a href="" class="button"> Click me</a></aside>
     <aside class="aside">float:right</aside>
     <main class="main">
         <a href="" class="button"> Click me</a>
+        <input type="button" value="OK" />
     </main>
-    <footer class="footer">footer{ clear: left}</footer>
+    <footer class="footer"><a href="" class="button"> Click me</a>footer{ clear: left}</footer>
 </body>
 </html>
